--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,12 @@ recordShortcut & playShortcut
 -keyboard
 -threading
 -time
+
+
+tensorModel & predict
+-tensorflow==2.0.0
+-Keras==2.3.1
+-matplotlib==3.1.3
+-numpy==1.18.1
+-sklearn==0.0
+-opencv-python==4.1.2.30
