--- a/requirements.txt
+++ b/requirements.txt
@@ -3,11 +3,9 @@ Packages needed to run certain files:
 
 recordShortcut & playShortcut
 (use pip install _____ to install package if not already installed on your client)
--pickle
--mouse
--keyboard
--threading
--time
+-mouse 0.7.1
+-keyboard 0.13.4
+
 
 
 tensorModel & predict
