--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,8 @@
-Packages needed to run certain files:
-
-
-recordShortcut & playShortcut
-(use pip install _____ to install package if not already installed on your client)
--mouse 0.7.1
--keyboard 0.13.4
-
-
-
-tensorModel & predict
--tensorflow==2.0.0
--Keras==2.3.1
--matplotlib==3.1.3
--numpy==1.18.1
--sklearn==0.0
--opencv-python==4.1.2.30
+tensorflow==2.0.0
+Keras==2.3.1
+matplotlib==3.1.3
+numpy==1.18.1
+sklearn==0.0
+opencv-python==4.1.2.30
+mouse 0.7.1
+keyboard 0.13.4
