--- a/requirements.txt
+++ b/requirements.txt
@@ -4,5 +4,5 @@ matplotlib==3.1.3
 numpy==1.18.1
 sklearn==0.0
 opencv-python==4.1.2.30
-mouse 0.7.1
-keyboard 0.13.4
+mouse==0.7.1
+keyboard==0.13.4
